<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/faq"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#837D7D">

    <EditText
        android:id="@+id/questionU"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="106dp"
        android:backgroundTint="#9A1006"
        android:ems="10"
        android:hint="@string/update_question"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answerU"
        android:layout_width="372dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#9A1006"
        android:ems="10"
        android:hint="@string/update_answer"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionU" />

    <Button
        android:id="@+id/update"
        android:layout_width="126dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#C6EFB815"
        android:text="@string/update"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerU" />

    <Button
        android:id="@+id/delete"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#CA3D3D"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerU" />
</androidx.constraintlayout.widget.ConstraintLayout>